syntax = "proto3";

package rpc;
option java_package = "io.github.dotstart.stockpile.rpc";

/**
 * Represents a complete user profile.
 */
message Profile {
  string id = 1;
  string name = 2;
  repeated ProfileProperty properties = 3;
  ProfileTextures textures = 4; // not set if no skin/cape are set for this account
}

message ProfileProperty {
  string name = 1;
  string value = 2;
  string signature = 3;
}

message ProfileTextures {
  string profileId = 1;
  string profileName = 2;
  string skinUrl = 3;
  string capeUrl = 4;
  int64 timestamp = 5;
}
